kubernates_manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
  namespace: workshop  # Updated namespace
spec:
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
